--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "emotion-theming": "^10.0.27",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-ga": "^3.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
     "typescript": "~3.7.2"
