--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "@types/react-router-dom": "^5.1.4",
     "emotion": "^10.0.27",
     "emotion-theming": "^10.0.27",
+    "express": "^4.17.1",
+    "express-favicon": "^2.0.1",
+    "path": "^0.12.7",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-ga": "^3.1.2",
@@ -23,7 +26,8 @@
     "typescript": "~3.7.2"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "node server.js",
+    "startdev": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
