--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "emotion-theming": "^10.0.27",
     "express": "^4.17.1",
     "express-favicon": "^2.0.1",
+    "husky": "^6.0.0",
+    "lint-staged": "^11.0.0",
     "path": "^0.12.7",
+    "prettier": "^2.3.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-ga": "^3.1.2",
@@ -26,7 +29,7 @@
     "typescript": "~3.7.2"
   },
   "scripts": {
-    "start": "node server.js",
+    "start": "react-scripts start",
     "startdev": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -34,6 +37,16 @@
   },
   "eslintConfig": {
     "extends": "react-app"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "src/**/*.{js,jsx,ts,tsx,json,css,scss,md}": [
+      "prettier --write"
+    ]
   },
   "browserslist": {
     "production": [
