--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "typescript": "~3.7.2"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "node server.js",
     "startdev": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
