--- a/package.json
+++ b/package.json
@@ -13,15 +13,12 @@
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "@types/react-router-dom": "^5.1.4",
-    "dompurify": "^2.3.3",
     "emotion": "^10.0.27",
     "emotion-theming": "^10.0.27",
     "express": "^4.17.1",
     "express-favicon": "^2.0.1",
-    "highlight.js": "^11.3.1",
     "husky": "^6.0.0",
     "lint-staged": "^11.0.0",
-    "markdown-to-jsx": "^7.1.3",
     "marked": "^3.0.7",
     "path": "^0.12.7",
     "prettier": "^2.3.0",
@@ -29,8 +26,6 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-ga": "^3.1.2",
-    "react-html-parser": "^2.0.2",
-    "react-markdown": "^7.1.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
     "typescript": "~3.7.2"
@@ -68,9 +63,7 @@
     ]
   },
   "devDependencies": {
-    "@types/dompurify": "^2.3.1",
     "@types/marked": "^3.0.2",
-    "@types/prismjs": "^1.16.6",
-    "@types/react-html-parser": "^2.0.2"
+    "@types/prismjs": "^1.16.6"
   }
 }
