--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-ga": "^3.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
+    "react-snow-effect": "^1.2.0",
     "reading-time": "^1.5.0",
     "typescript": "~3.7.2"
   },
