--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "husky": "^6.0.0",
     "lint-staged": "^11.0.0",
     "marked": "^3.0.7",
+    "node": "18.12.0",
     "path": "^0.12.7",
     "prerender-node": "^3.2.5",
     "prettier": "^2.3.0",
@@ -35,7 +36,7 @@
   },
   "scripts": {
     "start": "node server.js",
-    "start:dev": "react-scripts start",
+    "start:dev": "react-scripts --openssl-legacy-provider start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
