--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "prismjs": "^1.25.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-ga": "^3.1.2",
+    "react-ga4": "^2.1.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
     "react-snow-effect": "^1.2.0",
